Fixed Nav Issue And Updated Pic

--- a/services/dot-exams.html
+++ b/services/dot-exams.html
@@ -90,8 +90,8 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">About</a>
                             <div class="dropdown-menu bg-light rounded-0 rounded-bottom m-0">
-                                <a href="#" class="dropdown-item">Firm Foundation LLC</a>
-                                <a href="our-team.html" class="dropdown-item">Our Team</a>
+                                <a href="../about/about-firm-foundation.html" class="dropdown-item">Firm Foundation LLC</a>
+                                <a href="../about/our-team.html" class="dropdown-item">Our Team</a>
                             </div>
                         </div>
                         <a href="../our-services.html" class="nav-item nav-link active">Services</a>
@@ -144,7 +144,7 @@
             </div>
             <div class="row g-5 align-items-center">
                 <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
-                    <img class="img-fluid" src="../img/services/dot-exams.png" alt="">
+                    <img class="img-fluid" src="../img/services/dot.jpg" alt="">
                 </div>
                 <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
                     <h1>What's Included in a DOT Exam</h1>
