--- a/services/mental-health-and-counseling.html
+++ b/services/mental-health-and-counseling.html
@@ -90,8 +90,8 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">About</a>
                             <div class="dropdown-menu bg-light rounded-0 rounded-bottom m-0">
-                                <a href="#" class="dropdown-item">Firm Foundation LLC</a>
-                                <a href="our-team.html" class="dropdown-item">Our Team</a>
+                                <a href="../about/about-firm-foundation.html" class="dropdown-item">Firm Foundation LLC</a>
+                                <a href="../about/our-team.html" class="dropdown-item">Our Team</a>
                             </div>
                         </div>
                         <a href="../our-services.html" class="nav-item nav-link active">Services</a>
@@ -152,6 +152,24 @@
                         Our licensed professionals provide a safe, non-judgmental space for healing and transformation through:
                     </p>
                     <div class="owl-carousel testimonial-carousel">
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Mental Health Treatment and Counseling</h5>
+                            </div>
+                            <p class="fs-5">
+                                Comprehensive individual assessments, psychiatric evaluations and diagnoses. Medication 
+                                management is also provided for depression, anxiety,  ADHD and other mental health concerns.
+                            </p>
+                        </div>
+                        <div class="testimonial-item">
+                            <div class="d-flex align-items-center mb-4">
+                                <h5>Substance Use Services</h5>
+                            </div>
+                            <p class="fs-5">
+                                Comprehensive assessment, counseling and opioid treatment (using MAT (medicated assisted treatment) 
+                                with Vivitrol, Sublocade, Suboxone, and Naltrexoneas indicated).
+                            </p>
+                        </div>
                         <div class="testimonial-item">
                             <div class="d-flex align-items-center mb-4">
                                 <h5>Individual Therapy</h5>
