--- a/services/travel-clinic.html
+++ b/services/travel-clinic.html
@@ -90,8 +90,8 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">About</a>
                             <div class="dropdown-menu bg-light rounded-0 rounded-bottom m-0">
-                                <a href="#" class="dropdown-item">Firm Foundation LLC</a>
-                                <a href="our-team.html" class="dropdown-item">Our Team</a>
+                                <a href="../about/about-firm-foundation.html" class="dropdown-item">Firm Foundation LLC</a>
+                                <a href="../about/our-team.html" class="dropdown-item">Our Team</a>
                             </div>
                         </div>
                         <a href="../our-services.html" class="nav-item nav-link active">Services</a>
