Fixed Pic Not Displaying Issue

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/services/dot-exams.png" alt="">
+                            <img class="img-fluid w-100" src="img/services/dot.jpg" alt="">
                             <div class="service-text px-5 pt-4">
                                 <h5 class="text-uppercase">DOT Exams</h5>
                             </div>
