Added Team Pics

--- a/about/our-team.html
+++ b/about/our-team.html
@@ -133,56 +133,62 @@
     <div class="container-fluid team pt-6 pb-6">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <h1 class="display-6 text-uppercase mb-5">Meet Our Professional and Experience Team</h1>
+                <h1 class="display-6 text-uppercase mb-5">Meet Our Team</h1>
             </div>
             <div class="row g-4">
                 <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item">
                         <div class="position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="../img/team/Dr-Amoako.jpg" alt="">
+                            <img class="img-fluid w-100" src="../img/team/dr-amoako-1.JPG" alt="">
                         </div>
                         <div class="text-center p-4">
                             <h5 class="mb-1">Dr. Agyenim Amoako</h5>
                             <span>Co-Founder / MD</span><br>
                         </div>
                         <div class="text-center p-4">
-                            <p>
-                                Dr. Amoako is a highly skilled physician with a background in Biology and Chemistry from
-                                Delaware State University and a medical degree from Ross University School of Medicine, who
-                                brings over a decade of hands-on experience in primary and occupational healthcare. Completing
-                                his Family Medicine Residency at the University of Arkansas for Medical Sciences, Dr. Amoako
-                                has dedicated the past 10 years to serving as a primary care and occupational medicine provider
-                                at Mountaire Health and Wellness Center, a facility owned by Mountaire Delmarva Chicken
-                                Farms. In this role, he has provided critical healthcare services to employees and their families,
-                                addressing both preventive and acute medical needs, reducing workplace health risks, and
-                                improving overall employee well-being. His extensive experience in family medicine, coupled
-                                with his deep understanding of occupational health, ensures a strong foundation for delivering
-                                high-quality, community-centered medical care.
+                            <details>
+                                <summary class="btn btn-primary mb-3">Read Profile</summary>
+                                <p>
+                                    Dr. Amoako is a highly skilled physician with a background in Biology and Chemistry from
+                                    Delaware State University and a medical degree from Ross University School of Medicine, who
+                                    brings over a decade of hands-on experience in primary and occupational healthcare. Completing
+                                    his Family Medicine Residency at the University of Arkansas for Medical Sciences, Dr. Amoako
+                                    has dedicated the past 10 years to serving as a primary care and occupational medicine provider
+                                    at Mountaire Health and Wellness Center, a facility owned by Mountaire Delmarva Chicken
+                                    Farms. In this role, he has provided critical healthcare services to employees and their families,
+                                    addressing both preventive and acute medical needs, reducing workplace health risks, and
+                                    improving overall employee well-being. His extensive experience in family medicine, coupled
+                                    with his deep understanding of occupational health, ensures a strong foundation for delivering
+                                    high-quality, community-centered medical care.
+                                </p>
+                            </details>
                         
-                            </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
                     <div class="team-item">
                         <div class="position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="../img/team/Patience.jpg" alt="" style="height: 100%;">
+                            <img class="img-fluid w-100" src="../img/team/patience-1.jpg" alt="" style="height: 100%;">
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-1">Patience Agbevialdey</h5>
+                            <h5 class="mb-1">Patience Agbeviadey</h5>
                             <span>Co-Founder / Clinical Social Worker</span><br>
                         </div>
                         <div class="text-center p-4">
-                            <p>
-                                Patience Agbeviadey, a Licensed Clinical Social Worker (LCSW) with over 15 years of
-                                experience in substance use treatment and mental health, complements Dr. Amoako's medical
-                                expertise with a strong behavioral health focus. Holding a degree in Psychology and a Master's
-                                in Social Work from Delaware State University, she has worked extensively with individuals
-                                struggling with addiction, mental health challenges, and social determinants of health. Her
-                                expertise in developing and implementing effective mental health interventions will be
-                                instrumental in providing comprehensive care to our clients, ensuring that their emotional and
-                                psychological needs are met alongside their physical health requirements.
-                            </p>
+                            <details>
+                                <summary class="btn btn-primary mb-3">Read Profile</summary>
+                                <p>
+                                    Patience Agbeviadey, a Licensed Clinical Social Worker (LCSW) with over 15 years of
+                                    experience in substance use treatment and mental health, complements Dr. Amoako's medical
+                                    expertise with a strong behavioral health focus. Holding a degree in Psychology and a Master's
+                                    in Social Work from Delaware State University, she has worked extensively with individuals
+                                    struggling with addiction, mental health challenges, and social determinants of health. Her
+                                    expertise in developing and implementing effective mental health interventions will be
+                                    instrumental in providing comprehensive care to our clients, ensuring that their emotional and
+                                    psychological needs are met alongside their physical health requirements.
+                                </p>
+                            </details>
                         </div>
                     </div>
                 </div>
