--- a/our-contact.html
+++ b/our-contact.html
@@ -161,6 +161,17 @@
                                 <span class="text-white">+1 302-760-5510</span>
                             </div>
                         </div>
+                        <hr class="bg-body">
+                        <div class="d-flex align-items-start wow fadeIn" data-wow-delay="0.6s">
+                            <div class="btn-lg-square bg-white">
+                                <!-- <i class="bi bi-telephone text-dark fs-3"></i> -->
+                                <i class="fas fa-fax text-dark fs-3"></i>
+                            </div>
+                            <div class="ms-3">
+                                <h6 class="text-white text-uppercase">Fax</h6>
+                                <span class="text-white">+1 302-744-8007</span>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-lg-6 mb-n5 wow fadeIn" data-wow-delay="0.7s">
                         <div class="bg-white p-5">
