--- a/our-membership.html
+++ b/our-membership.html
@@ -134,9 +134,9 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
-                    <h1 class="display-1 text-uppercase">Page Under Construction</h1>
+                    <h1 class="display-1 text-uppercase">Check Here for Updates</h1>
                     <p class="mb-4">
-                        We're sorry, this page is under construction. Please check back later or contact us for more information.
+                        Stay tuned for the latest news and updates about our membership program.
                     </p>
                     <a class="btn btn-primary py-3 px-4" href="index.html">Go Back To Home</a>
                 </div>
