--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#header-carousel" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1">
-                    <img class="img-fluid" src="img/carousel/carousel-1.jpg" alt="Image">
+                    <img class="img-fluid" src="img/carousel/dr-amoako-patience.jpg" alt="Image">
                 </button>
                 <button type="button" data-bs-target="#header-carousel" data-bs-slide-to="1" aria-label="Slide 2">
-                    <img class="img-fluid" src="img/carousel/carousel-2.jpg" alt="Image">
+                    <img class="img-fluid" src="img/carousel/carousel-1.jpg" alt="Image">
                 </button>
                 <button type="button" data-bs-target="#header-carousel" data-bs-slide-to="2" aria-label="Slide 3">
                     <img class="img-fluid" src="img/carousel/carousel-3.jpg" alt="Image">
@@ -124,30 +124,42 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="img/carousel/carousel-1.jpg" alt="Image">
+                    <img class="w-100" src="img/carousel/dr-amoako-patience.jpg" alt="Image">
                     <div class="carousel-caption">
                         <h1 class="display-2 text-uppercase text-white mb-4 animated zoomIn">
-                            Firm Foundation LLC
+                            Patient-Centered Care
                         </h1>
-                        <a href="#" class="btn btn-primary rounded-pill py-3 px-4">Explore More</a>
+                        <p class="lead text-white mb-4 animated fadeIn">
+                            At Firm Foundation LLC, we prioritize the needs and preferences of our patients, ensuring that they 
+                            are at the center of their care.
+                        </p>
+                        <a href="about/about-firm-foundation.html" class="btn btn-primary rounded-pill py-3 px-4">About Us</a>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="w-100" src="img/carousel/carousel-2.jpg" alt="Image">
+                    <img class="w-100" src="img/carousel/carousel-1.jpg" alt="Image">
                     <div class="carousel-caption">
                         <h1 class="display-2 text-uppercase text-white mb-4 animated zoomIn">
-                            Firm Foundation LLC
+                            Convenient and Accessible Services
                         </h1>
-                        <a href="#" class="btn btn-primary rounded-pill py-3 px-4">Explore More</a>
+                        <p class="lead text-white mb-4 animated fadeIn">
+                            We offer a range of services designed to be convenient and accessible for our patients, including
+                            telemedicine options and flexible scheduling.
+                        </p>
+                        <!-- <a href="#" class="btn btn-primary rounded-pill py-3 px-4">Explore More</a> -->
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img class="w-100" src="img/carousel/carousel-3.jpg" alt="Image">
                     <div class="carousel-caption">
                         <h1 class="display-2 text-uppercase text-white mb-4 animated zoomIn">
-                            Firm Foundation LLC
+                            Holistic Approach
                         </h1>
-                        <a href="#" class="btn btn-primary rounded-pill py-3 px-4">Explore More</a>
+                        <p class="lead text-white mb-4 animated fadeIn">
+                            At Firm Foundation LLC, we take a holistic approach to healthcare, addressing not just the
+                            physical but also the mental and emotional well-being of our patients.
+                        </p>
+                        <!-- <a href="#" class="btn btn-primary rounded-pill py-3 px-4">Explore More</a> -->
                     </div>
                 </div>
             </div>
